<resources>
    <string name="app_name">Video Recording Sample</string>

    <string name="settings">Settings</string>
    <string name="label_mic_only">Mic Only</string>
    <string name="label_sd">SD (480 x 720)</string>
    <string name="label_hd">HD (720 x 1280)</string>
    <string name="label_full_hd">Full HD (1080 x 1920)</string>

    <string name="finished_record_normally_toast_message">Record is finished normally.</string>
    <string name="finished_record_abnormally_toast_message">Record is finished abnormally.</string>
</resources>