<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/textView_resolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_mic_only"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="3"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:id="@+id/mtb_record"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:padding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="28dp"
        app:icon="@drawable/ic_circle"
        app:iconSize="30dp"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <RadioGroup
        android:id="@+id/radioGroup_fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_settings"
        >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mrb_mic_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mic_only"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            android:checked="true"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mrb_sd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sd"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mrb_hd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_hd"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mrb_full_hd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_full_hd"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="3"
            />
    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/settings"
        app:borderWidth="0dp"
        app:elevation="10dp"
        app:tint="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>